--- a/index.html
+++ b/index.html
@@ -1259,7 +1259,7 @@
             <div class="hero-content">
                 <div class="hero-badge">Эксклюзивные предложения</div>
                 <h1 class="hero-title">Персональные бонусы для умных игроков</h1>
-                <p class="hero-subtitle">Мы анализируем весь рынок и подбираем проверенные предложения, которые реально работают и приносят прибыль</p>
+                <p class="hero-subtitle">Только проверенные предложения, приносящие прибыль</p>
                 
                 <div class="hero-stats">
                     <div class="stat-item">
